Adding some links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     </title>
   </head>
   <body>
-    <h1> Some links to things I use constantly </h1>
+    <div class="Links">
+    <h1 id="Link Section"> Some links to things I use constantly </h1>
+      <ul>
+        <li> <a href="https://www.vulnhub.com">Vulnhub</a>: Millions of vulnerable VMs to download and build your own lab with. Some VMware some VirtualBox</li>
+        <li> <a href="https://root-me.org">Root-me.org</a>: CTF Site</li>
+        <li> <a href="io.netgarage.org">Netgarage</a>: CTF Site</li>
+        <li> <a href="http://www.gameofhacks.com">Game of Hacks</a>: CTF Site</li>
+        <li> <a href="http://google-gruyer.appspot.com">Web Application Exploits and Defenses</a>: Google Gruyere CTF type thing</li>
+        <li> <a href="https://www.hackthis.co.uk">HackThis!-The Hackers Playground</a>: CTF Site</li>
+        <li> <a href="https://ringzer0ctf.com">RingZer0 CTF</a>: Ctf Site</li>
+    </div>
+
   </body>
   </html>
 
