Adding more links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
         <li> <a href="http://www.gameofhacks.com">Game of Hacks</a>: CTF Site</li>
         <li> <a href="http://google-gruyer.appspot.com">Web Application Exploits and Defenses</a>: Google Gruyere CTF type thing</li>
         <li> <a href="https://www.hackthis.co.uk">HackThis!-The Hackers Playground</a>: CTF Site</li>
-        <li> <a href="https://ringzer0ctf.com">RingZer0 CTF</a>: Ctf Site</li>
+        <li> <a href="https://ringzer0ctf.com">RingZer0 CTF</a>: CTF Site</li>
+        <li> <a href="http://www.try2hack.nl/">Try2hack</a>: CTF Site</li>
+        <li> <a href="https://pwn0.com/">PWN0 </a>: CTF Site</li>
+        <li> <a href="https://www.hackthissite.org/">Hack This Site</a>: CTF Site</li>
+        <li> <a href="https://w3challs.com/">W3 Challenges</a>: CTF Site</li>
+        <li> <a href="https://www.hellboundhackers.org/">HellBound Hackers</a>: Hacking MMO</li>
+        <li> <a href="https://hack.me/">HackMe</a>: CTF Site</li>
+        <li> <a href="https://www.enigmagroup.org/">Enigma Group</a>: CTF Site</li>
+
     </div>
 
   </body>
